- Minor fix to the {form_start} plugin
- Minor change to the {admin_icon} plugin (default image class).
- Cache more items that are queried from the database, to reduce mysql load.
- Minor change to tree operations functionality to reduce memory usage
- Fixed problem with order of content blocks when using {content_module} stuff.

Content Manager
- Minor tweak to bulk delete pages.

DesignManager
- Move the designs tab of the main interface into third position.
- Implement sorting in edit design.
- Remove option menus (for now) from templates, stylesheets, and designs tab.
- Modify the template list functionality in edit-design to allow using keyboard control.   space or + to select an item on the left, and right arrow to move

News v2.50.5
- Minor fix to add category.

FileManager v1.6
- Move settings to it's own menu item under site-admin
- Fix minor problem with moving a directory.

Phar Installer v1.2
- A database account password is now required
- Upgrade routine now asks for, and tests database credentials
- Upgrade routine now rewrites the config.php file (but keeps a backup)

Search
- Convert to store all data using the InnoDB engine
- Use transactions for the addwords and deletewords stuff for performance.
- Fix problem with query and record expiry.

AdminSearch v1.0.1
- Fixes problem with use of 'Use Admin Search' permission.

Version 2.1.2 - Andros Town
----------------------------------
Core - General
- Minor fix to missing language string stuff
- Fixes to home page preferences
- API documentation fixes (minor)
- Fixes for ajax_content (the Ajax routine behind the parent selector in edit content) to handle ordering inconsistencies
- Remove die statement in is_email
- Minor fix to the relative_time modifier.
- Upgrade CMSMailer to 6.2.14
- Now do a check for E_ALL in the system info

News v2.50.4
- Now all field definitions can be deleted

ModuleManager v2.0.2
- Revamp module dependency calculations when installing a module