@@ -73,6 +73,7 @@ $(document).ready(function(){
         // disable the dirty form stuff, and unlock because we're gonna relockit on reload.
         var self = this;
         $('#Edit_Content').dirtyForm('disable');
+	$('#active_tab').val('{$options_tab_name}');
 	if( do_locking ) {
 	  if( do_locking) $('#Edit_Content').lockManager('unlock').done(function(){
             $(self).closest('form').submit();
@@ -114,7 +115,6 @@ $(document).ready(function(){
 	    	form.submit();
 	    });
 	}
-	if( do_locking ) $('#Edit_Content').lockManager('unlock');
     });
 
     // handle apply (ajax submit)
@@ -225,11 +225,12 @@ $(document).ready(function(){
 <div id="Edit_Content_Result"></div>
 <div id="Edit_Content">
 {form_start content_id=$content_id}
+  <input type="hidden" id="active_tab" name="{$actionid}active_tab"/>
   {submit_buttons}
 
   {* tab headers *}
   {foreach $tab_names as $key => $tabname}
-    {tab_header name=$key label=$tabname}
+    {tab_header name=$key label=$tabname active=$active_tab}
   {/foreach}
   {if $content_obj->HasPreview()}
     {tab_header name='_preview_' label=$mod->Lang('prompt_preview')}
